--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -40,6 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         target:
+          - x86_64-linux-gnu-cxx11
           - x86_64-w64-mingw32-cxx11
           - aarch64-apple-darwin
           - i686-w64-mingw32-cxx11
