--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,6 +8,10 @@ on:
         description: 'LLVM sha to build'
         required: false
         type: string
+      MINIMAL_LLVM_BUILD:
+        description: 'Build minimal LLVM needed to get Julia working'
+        required: true
+        type: boolean
       # save_cache:
       #   required: true
       #   type: boolean
@@ -50,3 +54,4 @@ jobs:
       LLVM_VERSION: ${{ needs.fetch_llvm_version.outputs.LLVM_VERSION }}
       LLVM_VERSION_MAJOR: ${{ needs.fetch_llvm_version.outputs.LLVM_VERSION_MAJOR }}
       save_cache: ${{ github.ref == 'refs/heads/master' && github.event.inputs.LLVM_VERSION == '' }}
+      MINIMAL_LLVM_BUILD: ${{ github.event.inputs.MINIMAL_LLVM_BUILD }}
