--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -16,7 +16,8 @@ on:
         required: true
       MINIMAL_LLVM_BUILD:
         type: boolean
-        required: true
+        required: false
+        default: false
 
 jobs:
   build_llvm_assert:
