--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -16,8 +16,7 @@ on:
         required: true
       MINIMAL_LLVM_BUILD:
         type: boolean
-        required: false
-        default: false
+        required: true
 
 jobs:
   build_llvm_assert:
