Dont use system Julia

--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -252,11 +252,11 @@ jobs:
           tar xzf *.tar.gz
           cd julia-*/
 
-          julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
+          ./julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
 
           export JULIA_TEST_MAXRSS_MB=3800
 
-          julia -e "Base.runtests(; ncores=4)"
+          ./julia -e "Base.runtests(; ncores=4)"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -283,11 +283,11 @@ jobs:
           tar xzf *.tar.gz
           cd julia-*/
 
-          julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
+          ./julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
 
           export JULIA_TEST_MAXRSS_MB=3800
 
-          julia -e "Base.runtests(; ncores=4)"
+          ./julia -e "Base.runtests(; ncores=4)"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
