--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -232,3 +232,65 @@ jobs:
           name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
           path: ${{ github.workspace }}/julia/*.tar.gz
           if-no-files-found: warn
+  test_julia_assert_windows:
+    if: inputs.target == 'x86_64-w64-mingw32-cxx11' || inputs.target == 'i686-w64-mingw32-cxx11'
+    runs-on: windows-latest
+    needs: build_julia_assert_windows
+    timeout-minutes: 120
+    env:
+      LLVM_VERSION_MAJOR: ${{ inputs.LLVM_VERSION_MAJOR }}
+    steps:
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
+      - name: "Test Julia Assert"
+        shell: bash
+        run: |
+          set -o xtrace
+
+          tar xzf *.tar.gz
+          cd julia-*/
+
+          ./julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
+
+          export JULIA_TEST_MAXRSS_MB=3800
+
+          ./julia -e "Base.runtests(; ncores=4)"
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}-test-results
+          path: ${{ github.workspace }}/julia-*/share/julia/test/results*.json
+          if-no-files-found: warn
+  test_julia_assert_linux:
+    if: inputs.target == 'x86_64-linux-gnu-cxx11'
+    runs-on: ubuntu-latest
+    needs: build_julia_assert_linux
+    timeout-minutes: 120
+    env:
+      LLVM_VERSION_MAJOR: ${{ inputs.LLVM_VERSION_MAJOR }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
+      - name: "Test Julia Assert"
+        run: |
+          set -o xtrace
+
+          tar xzf *.tar.gz
+          cd julia-*/
+
+          ./julia -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
+
+          export JULIA_TEST_MAXRSS_MB=3800
+
+          ./julia -e "Base.runtests(; ncores=4)"
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}-test-results
+          path: ${{ github.workspace }}/julia-*/share/julia/test/results*.json
+          if-no-files-found: warn
