--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -127,7 +127,9 @@ jobs:
             fi
           done
 
-          echo "JULIA_PATCHES_TO_APPLY=${JULIA_PATCHES_TO_APPLY[*]}" >> "$GITHUB_OUTPUT"
+          JULIA_PATCHES_TO_APPLY=$(git rev-list --no-walk=sorted --reverse ${JULIA_PATCHES_TO_APPLY[*]} | tr '\n' ' ')
+
+          echo "JULIA_PATCHES_TO_APPLY=$JULIA_PATCHES_TO_APPLY" >> "$GITHUB_OUTPUT"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
