--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -149,6 +149,7 @@ jobs:
           git config --global core.autocrlf input
       - uses: actions/checkout@v4
       - uses: msys2/setup-msys2@v2
+        id: msys2
         with:
           msystem: ${{ inputs.target == 'x86_64-w64-mingw32-cxx11' && 'MINGW64' || 'MINGW32' }}
           update: true
