--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -166,6 +166,7 @@ jobs:
             p7zip
             curl
             python
+          pacboy: gcc-fortran:p
       - name: Download a single artifact
         uses: actions/download-artifact@v4
         with:
