--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -203,13 +203,13 @@ jobs:
             JULIA_CPU_TARGET="pentium4"
           fi
 
-          contrib/asan/build.sh asan -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET=$JULIA_CPU_TARGET
-          contrib/asan/build.sh asan -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET=$JULIA_CPU_TARGET binary-dist
+          contrib/asan/build.sh build -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET=$JULIA_CPU_TARGET
+          contrib/asan/build.sh build -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET=$JULIA_CPU_TARGET binary-dist
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
-          path: ${{ github.workspace }}/julia/asan/asan/*.tar.gz
+          path: ${{ github.workspace }}/julia/build/asan/*.tar.gz
           if-no-files-found: warn
   build_julia_assert_linux:
     if: inputs.target == 'x86_64-linux-gnu-cxx11'
@@ -243,13 +243,13 @@ jobs:
           mkdir -p deps/srccache
           mv ../LLVM_full_assert.v${LLVM_VERSION_MAJOR}.0.0.${{ inputs.target }}.tar.gz deps/srccache/libLLVM.v18.1.7+2.${{ inputs.target }}.tar.gz
 
-          contrib/asan/build.sh asan -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET="generic;sandybridge,-xsaveopt,clone_all;haswell,-rdrnd,base(1)"
-          contrib/asan/build.sh asan -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET="generic;sandybridge,-xsaveopt,clone_all;haswell,-rdrnd,base(1)" binary-dist
+          contrib/asan/build.sh build -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET="generic;sandybridge,-xsaveopt,clone_all;haswell,-rdrnd,base(1)"
+          contrib/asan/build.sh build -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET="generic;sandybridge,-xsaveopt,clone_all;haswell,-rdrnd,base(1)" binary-dist
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
-          path: ${{ github.workspace }}/julia/asan/asan/*.tar.gz
+          path: ${{ github.workspace }}/julia/build/asan/*.tar.gz
           if-no-files-found: warn
   test_julia_assert_windows:
     if: inputs.target == 'x86_64-w64-mingw32-cxx11' || inputs.target == 'i686-w64-mingw32-cxx11'
