--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -203,8 +203,8 @@ jobs:
             JULIA_CPU_TARGET="pentium4"
           fi
 
-          contrib/asan/build.sh asan -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET=$JULIA_CPU_TARGET
-          contrib/asan/build.sh asan -j4 JULIA_PRECOMPILE=1 FORCE_ASSERTIONS=1 LLVM_ASSERTIONS=1 VERBOSE=1 LLVM_JLL_TAGS= LLVM_SHARED_LIB_VER_SUFFIX=${LLVM_VERSION_MAJOR}jl JULIA_CPU_TARGET=$JULIA_CPU_TARGET binary-dist
+          contrib/asan/build.sh asan -j4 
+          contrib/asan/build.sh asan -j4 binary-dist
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
