--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -141,7 +141,7 @@ jobs:
   build_julia_assert_windows:
     if: inputs.target == 'x86_64-w64-mingw32-cxx11' || inputs.target == 'i686-w64-mingw32-cxx11'
     runs-on: windows-latest
-    needs: build_llvm_assert
+    # needs: build_llvm_assert
     timeout-minutes: 120
     env:
       LLVM_VERSION_MAJOR: ${{ inputs.LLVM_VERSION_MAJOR }}
@@ -184,25 +184,10 @@ jobs:
           fi
 
           export MSYS=winsymlinks:sysfile
-          git clone https://github.com/Zentrik/julia
+          git clone https://github.com/JuliaLang/julia
           cd julia
-          git fetch
-          git switch llvm-19
           echo $(git rev-parse HEAD)
-
-          for patch in ${{ needs.build_llvm_assert.outputs.JULIA_PATCHES_TO_APPLY }}; do
-            git apply $GITHUB_WORKSPACE/julia-patches/$patch -v
-          done
-
-          mkdir -p deps/srccache
-          mv ../LLVM_full_assert.v${LLVM_VERSION_MAJOR}.0.0.${{ inputs.target }}.tar.gz deps/srccache/libLLVM.v18.1.7+2.${{ inputs.target }}.tar.gz
-
-          if [[ "${{ inputs.target }}" == "x86_64-w64-mingw32-cxx11" ]]; then
-            JULIA_CPU_TARGET="generic;sandybridge,-xsaveopt,clone_all;haswell,-rdrnd,base(1)"
-          else
-            JULIA_CPU_TARGET="pentium4"
-          fi
-
+          
           contrib/asan/build.sh asan -j4 
           contrib/asan/build.sh asan -j4 binary-dist
       - name: Upload artifacts
