--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -268,7 +268,7 @@ jobs:
           cd julia-*/
 
           bin/julia.exe -e 'using InteractiveUtils; InteractiveUtils.versioninfo()'
-          bin/julia.exe -e "Base.runtests(\"all --ci --skip Pkg Sockets cmdlineargs\"; ncores=4)"
+          bin/julia.exe -e "Base.runtests(\"all --ci --skip Pkg Sockets cmdlineargs\")"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: always()
