--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -258,8 +258,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: julia-assert-${{ inputs.target }}-${{ inputs.LLVM_VERSION }}
+      - uses: msys2/setup-msys2@v2
+        id: msys2
+        with:
+          msystem: ${{ inputs.target == 'x86_64-w64-mingw32-cxx11' && 'MINGW64' || 'MINGW32' }}
       - name: "Test Julia Assert"
-        shell: bash
+        shell: msys2 {0}
         run: |
           set -o xtrace
 
