Fix 3 way merge

--- a/.github/workflows/build-and-test-template.yml
+++ b/.github/workflows/build-and-test-template.yml
@@ -185,6 +185,7 @@ jobs:
           git clone https://github.com/JuliaLang/julia
           cd julia
           echo $(git rev-parse HEAD)
+          git fetch --unshallow # https://stackoverflow.com/questions/33577383/git-apply-three-way-error-repository-lacks-the-necessary-blob-to-fall-back-on-3
 
           for patch in ${{ needs.build_llvm_assert.outputs.JULIA_PATCHES_TO_APPLY }}; do
             git apply $GITHUB_WORKSPACE/julia-patches/$patch -v --3way
@@ -230,6 +231,7 @@ jobs:
           git clone https://github.com/JuliaLang/julia
           cd julia
           echo $(git rev-parse HEAD)
+          git fetch --unshallow # https://stackoverflow.com/questions/33577383/git-apply-three-way-error-repository-lacks-the-necessary-blob-to-fall-back-on-3
 
           for patch in ${{ needs.build_llvm_assert.outputs.JULIA_PATCHES_TO_APPLY }}; do
             git apply $GITHUB_WORKSPACE/julia-patches/$patch -v --3way
